--- a/src/components/SparqlList/SparqlList.scss
+++ b/src/components/SparqlList/SparqlList.scss
@@ -12,8 +12,8 @@
 .qbox {
   border: 2px solid #f5f5f5;
   padding: 2px 20px 2px 20px;
-  //height: 200px;
-  //overflow-y: scroll;
+  height: 200px;
+  overflow-y: scroll;
   margin-bottom: 10px;
 }
 
